# jfind

./: .gitignore  CHANGELOG.md  LICENSE  Makefile  README.md  Taskfile.yml  alembic.ini  java_properties.go  java_properties_test.go  main.go  pyproject.toml
alembic/: env.py
alembic/versions/: 26be0b9c206b_add_scan_path_and_count_require_license_.py  b85d9e8ebb87_add_platform_info_to_scan_info.py  cb1040c5742e_initial_schema.py  e9eed3fdb899_add_most_recent_to_scan_info.py
scanner/: .gitignore  .golangci.yml  Makefile  README.md  Taskfile.yml  go.mod  java_finder.go  java_license_check.go  java_properties_test.go  main.go  post.go  types.go  utils.go
scripts/: ncat.sh
src/jfind_svc/: db.py  db_model.py  jfind_db.py  main.py  model.py
src/jfind_svc/routes/: __init__.py  health.py  jfind.py
tests/: conftest.py  test_health.py  test_jfind.py  test_jfind_get.py  test_jfind_post.py
