[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "jfind-svc"
dynamic = ["version"]
description = "JFind backend service"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn>=0.27.0",
    "uvicorn[standard]>=0.27.0",
    "sqlalchemy>=2.0.0",
    "asyncpg>=0.29.0",  # Async PostgreSQL driver
    "aiosqlite>=0.19.0",  # Async SQLite driver
]


[project.optional-dependencies]
build = [
    "pip-tools",
    "build",
    "wheel",
]
dev = [
    "ruff",
    "pytest",
]

[project.scripts]
jfind-svc = "jfind_svc.main:run"

[tool.ruff]
line-length = 130
target-version = "py38"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.ruff.lint]
ignore = []
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4",  # flake8-comprehensions
    "SIM", # flake8-simplify
    "UP",  # pyupgrade
    "ARG001", # unused arguments in functions
]

[tool.setuptools.dynamic]
version = { attr = "jfind_svc.__about__.__version__" }

[tool.coverage.run]
omit = [
    ]
